<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingFragment">

    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Setting"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/setting"
        >

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/dark"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:backgroundTint="@color/white"-->
<!--            app:cardCornerRadius="10sp"-->
<!--            android:layout_marginTop="10sp"-->


<!--            >-->

<!--            <ImageView-->
<!--                android:layout_width="22dp"-->
<!--                android:layout_height="22dp"-->

<!--                android:layout_gravity="center_vertical"-->
<!--                android:layout_marginLeft="10sp"-->
<!--                />-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Dark"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="13dp"-->
<!--                android:layout_marginLeft="40sp"-->
<!--                />-->

<!--            <androidx.appcompat.widget.SwitchCompat-->
<!--                android:id="@+id/dark_theme_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="end"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                />-->

<!--        </androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/shareBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="10sp"
            android:layout_marginTop="10sp"


            >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/share"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:layout_marginLeft="50sp"
                />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/policyBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/red"
            app:cardCornerRadius="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/shareBtn"


            >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/privacy"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:layout_marginLeft="50sp"
                />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/rateBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/dark_blue"
            app:cardCornerRadius="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/policyBtn"


            >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/rate"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:layout_marginLeft="50sp"
                />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/withdrawBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/green"
            app:cardCornerRadius="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/rateBtn"


            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/rate"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Withdraw"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginLeft="50sp"
                />


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/rafer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/sky"
            app:cardCornerRadius="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/withdrawBtn"


            >


            <ImageView
                android:id="@+id/copy"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/copy"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10sp"
                />
            <TextView
                android:id="@+id/rafer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:layout_marginLeft="40sp"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="your referral code"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:layout_marginLeft="40sp"
                />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/items"
        android:layout_margin="10dp"
        >

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>




    </LinearLayout>

</RelativeLayout>